be carful this is big update

--- a/src/pages/footer/footer.css
+++ b/src/pages/footer/footer.css
@@ -4,3 +4,9 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+.bg{
+  background-image: url(../../media/bg.jpg);
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
