--- a/src/pages/footer/footer.css
+++ b/src/pages/footer/footer.css
@@ -10,3 +10,99 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+svg:hover , .bx:hover{
+  color: #3e82d2;
+}
+.bx{
+  font-size:33px;
+}
+.baa{
+  
+  background:rgba(30, 31, 54, 0.418);
+}
+.cash{
+  
+}
+input:focus{
+  background: transparent;
+  color: white;
+}
+textarea:focus{
+  background: transparent;
+  color: white;
+}
+#btn:hover{
+  transition: all 0.7s;
+  background-color: #8e1474;
+  border-radius: 2%;
+  -webkit-border-radius: 2%;
+  -moz-border-radius: 2%;
+  -ms-border-radius: 2%;
+  -o-border-radius: 2%;
+  -webkit-transition: all 0.7s;
+  -moz-transition: all 0.7s;
+  -ms-transition: all 0.7s;
+  -o-transition: all 0.7s;
+}
+#icon{
+
+font-size: 19px;
+
+}
+#check{
+  font-size: 19px;
+  color:chartreuse;
+}
+button {
+  font-family: inherit;
+  font-size: 20px;
+  background: royalblue;
+  color: white;
+  padding: 0.7em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 16px;
+  overflow: hidden;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+button span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+}
+
+button svg {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover .svg-wrapper {
+  animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+button:hover svg {
+  transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+button:hover span {
+  transform: translateX(5em);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+  from {
+    transform: translateY(0.1em);
+  }
+
+  to {
+    transform: translateY(-0.1em);
+  }
+}
